fix styling of flash message alerts on "anonymous" home page (site index)
due to "marketing" image margin and corner-rounding looked odd -- these
have been disabled

additionally, text was hidden behind logo overhang -- text has been
centered

--- a/src/marketplace/static/css/dssgsolve_frontpage.css
+++ b/src/marketplace/static/css/dssgsolve_frontpage.css
@@ -92,3 +92,9 @@ h1, h2, h3 {
 .card-header {
   background-color: #2C3E50;
 }
+
+.alert {
+  border-radius: 0;
+  margin: 0;
+  text-align: center;
+}
